tests/NormalTests/paczka1/fuzzy1/40534580.err
Error in line 2: AJlp A686 49,6
Error in line 4: AJlp S141 74,8
Error in line 15: A984 A686 44,4
Error in line 5: AJlp A686 74,1
